updated scripts to work with processed segmentation masks

--- a/airbus_unet34_keras-3-distributed.ipynb
+++ b/airbus_unet34_keras-3-distributed.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,17 +63,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ship_dir = '/mnt/fsx/airbus_data/'\n",
-    "train_image_dir = os.path.join(ship_dir, 'train_small')"
+    "ship_dir = '/mnt/fsx/airbus_data/deep_learning_v2'\n",
+    "train_image_dir = os.path.join(ship_dir, 'train')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,34 +120,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1218 masks found\n",
-      "816\n",
+      "100 masks found\n",
+      "100\n",
       "                                             ImageId  \\\n",
-      "0  000155de5_cc7a0ba3-e660-472b-b8f2-ec2fe1174400...   \n",
-      "1  00021ddc3_8e5aa526-f180-48f5-aad9-f0ca73bcf015...   \n",
-      "2  00021ddc3_8e5aa526-f180-48f5-aad9-f0ca73bcf015...   \n",
-      "3  00021ddc3_8e5aa526-f180-48f5-aad9-f0ca73bcf015...   \n",
-      "4  00021ddc3_8e5aa526-f180-48f5-aad9-f0ca73bcf015...   \n",
+      "0                                      00003e153.jpg   \n",
+      "1                                      0001124c7.jpg   \n",
+      "2                                      000155de5.jpg   \n",
+      "3  000155de5_007bfc55-5a0d-4955-a7b7-1aa358c31b13...   \n",
+      "4  000155de5_01269454-3e9e-4055-b171-327c3271b8db...   \n",
       "\n",
       "                                       EncodedPixels  \n",
-      "0  186376 1 187141 4 187907 7 188672 10 189438 13...  \n",
-      "1    48177 1 48943 5 49710 4 50476 6 51245 3 52014 1  \n",
-      "2            51279 1 52047 2 52815 2 53583 3 54352 3  \n",
-      "3  650 11 1419 9 2186 11 2953 12 3722 10 4489 10 ...  \n",
-      "4  665 11 1432 11 2200 10 2968 9 3735 11 4504 10 ...  \n"
+      "0                                                NaN  \n",
+      "1                                                NaN  \n",
+      "2  264661 17 265429 33 266197 33 266965 33 267733...  \n",
+      "3  310570 5 311331 12 312095 16 312860 19 313622 ...  \n",
+      "4  278512 2 279280 4 280047 7 280815 13 281582 16...  \n"
      ]
     }
    ],
    "source": [
     "train_masks = pd.read_csv(os.path.join(ship_dir,\n",
-    "                                 'train_ship_segmentations_train.csv'))\n",
+    "                                 'train_ship_segmentations_train.csv.small'))\n",
     "print(train_masks.shape[0], 'masks found')\n",
     "print(train_masks['ImageId'].value_counts().shape[0])\n",
     "print(train_masks.head())"
@@ -155,33 +155,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def make_image_gen(in_df, batch_size = BATCH_SIZE):\n",
-    "    all_batches = list(in_df.groupby('ImageId'))\n",
+    "#     all_batches = list(in_df.groupby('ImageId'))\n",
     "    out_rgb = []\n",
     "    out_mask = []\n",
-    "    while True:\n",
-    "        np.random.shuffle(all_batches)\n",
-    "        for c_img_id, c_masks in all_batches:\n",
-    "            rgb_path = os.path.join(train_image_dir, c_img_id)\n",
-    "            c_img = imread(rgb_path)\n",
-    "            c_mask = masks_as_image(c_masks['EncodedPixels'].values)\n",
-    "            if IMG_SCALING is not None:\n",
-    "                c_img = c_img[::IMG_SCALING[0], ::IMG_SCALING[1]]\n",
-    "                c_mask = c_mask[::IMG_SCALING[0], ::IMG_SCALING[1]]\n",
-    "            out_rgb += [c_img]\n",
-    "            out_mask += [c_mask]\n",
-    "            if len(out_rgb)>=batch_size:\n",
-    "                yield np.stack(out_rgb, 0)/255.0, np.stack(out_mask, 0)\n",
-    "                out_rgb, out_mask=[], []"
+    "    for _, row in in_df.iterrows():\n",
+    "        c_img_id = row['ImageId']\n",
+    "        masks = row['EncodedPixels']\n",
+    "        rgb_path = os.path.join(train_image_dir, c_img_id)\n",
+    "        c_img = imread(rgb_path)\n",
+    "        c_mask = masks_as_image([masks])\n",
+    "        if IMG_SCALING is not None:\n",
+    "            c_img = c_img[::IMG_SCALING[0], ::IMG_SCALING[1]]\n",
+    "            c_mask = c_mask[::IMG_SCALING[0], ::IMG_SCALING[1]]\n",
+    "        out_rgb += [c_img]\n",
+    "        out_mask += [c_mask]\n",
+    "        if len(out_rgb)>=batch_size:\n",
+    "            yield np.stack(out_rgb, 0)/255.0, np.stack(out_mask, 0)\n",
+    "            out_rgb, out_mask=[], []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -202,28 +202,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(train_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "325 masks found\n",
-      "141\n",
-      "                                             ImageId  \\\n",
-      "0  000194a2d_9abc3b11-d82c-4fbf-9014-b4d11787d6d5...   \n",
-      "1  000194a2d_9abc3b11-d82c-4fbf-9014-b4d11787d6d5...   \n",
-      "2  000194a2d_9abc3b11-d82c-4fbf-9014-b4d11787d6d5...   \n",
-      "3  000194a2d_9abc3b11-d82c-4fbf-9014-b4d11787d6d5...   \n",
-      "4  0002756f7_cce98450-44fe-488b-9f05-bd0d0748abf4...   \n",
-      "\n",
-      "                                       EncodedPixels  \n",
-      "0  309689 4 310455 6 311222 8 311989 9 312755 11 ...  \n",
-      "1  357323 1 358089 3 358855 6 359620 9 360388 10 ...  \n",
-      "2  190702 1 191469 6 192237 6 193005 7 193772 7 1...  \n",
-      "3  451292 1 452058 4 452824 6 453590 9 454358 9 4...  \n",
-      "4  222632 3 223398 5 224165 7 224932 8 225699 10 ...  \n"
+      "1000 masks found\n"
      ]
     }
    ],
@@ -236,20 +242,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x (325, 768, 768, 3) 0.0 1.0\n",
-      "y (325, 768, 768, 1) 0 1\n"
+      "x (1000, 768, 768, 3) 0.0 1.0\n",
+      "y (1000, 768, 768, 1) 0 1\n"
      ]
     }
    ],
    "source": [
-    "valid_gen = make_image_gen(valid_masks, validation_samples) # pull all validation samples\n",
+    "valid_gen = make_image_gen(valid_masks, 1000) # pull all validation samples\n",
     "valid_x, valid_y = next(valid_gen)\n",
     "print('x', valid_x.shape, valid_x.min(), valid_x.max())\n",
     "print('y', valid_y.shape, valid_y.min(), valid_y.max())"
