--- a/airbus_ship_detection_sagemaker_fsx.ipynb
+++ b/airbus_ship_detection_sagemaker_fsx.ipynb
@@ -2,20 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sagemaker.tensorflow import TensorFlow\n",
+    "from sagemaker.inputs import FileSystemInput\n",
+    "import os\n",
     "\n",
-    "hvd_instance_type = 'ml.p3.8xlarge'\n",
-    "hvd_processes_per_host = 4\n",
+    "hvd_instance_type = 'ml.p3.16xlarge'\n",
+    "hvd_processes_per_host = 8\n",
     "hvd_instance_count = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,12 +36,13 @@
     "                   {'Name': 'val:loss', 'Regex': 'val_loss=(.*?),'},\n",
     "                   {'Name': 'val:dice_coef', 'Regex': 'val_dice_coef=(.*?),'},\n",
     "                   {'Name': 'val:binary_accuracy', 'Regex': 'val_bin_accuracy=(.*?),'},\n",
-    "                   {'Name': 'val:true_positive_rate', 'Regex': 'val_true_positive_rate=(.*?)'}"
+    "                   {'Name': 'val:true_positive_rate', 'Regex': 'val_true_positive_rate=(.*?)'}\n",
+    "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,14 +54,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Parameter distribution will be renamed to {'mpi': {'enabled': True, 'processes_per_host': 8, 'custom_mpi_options': '-verbose --NCCL_DEBUG=INFO -x OMPI_MCA_btl_vader_single_copy_mechanism=none'}} in SageMaker Python SDK v2.\n"
+     ]
+    }
+   ],
    "source": [
     "estimator_hvd = TensorFlow(\n",
     "                       source_dir='.',\n",
-    "                       entry_point='launcher.sh',\n",
-    "                       base_job_name='airbus-unet34-keras-3-distributed',\n",
+    "                       entry_point='launcher_fsx.sh',\n",
+    "                       base_job_name='airbus-unet34-keras-3-distributed-fsx',\n",
     "                       role=role,\n",
     "                       framework_version='2.1.0',\n",
     "                       py_version='py3',\n",
@@ -69,12 +80,12 @@
     "                       subnets=[\"subnet-0951bd7928432fe42\"],\n",
     "                       security_group_ids=[\"sg-087f69d528dfc0196\"],\n",
     "                       metric_definitions=metric_definitions,\n",
-    "                       output_path=output_path"
+    "                       output_path=output_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,19 +99,41 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "'create_image_uri' will be deprecated in favor of 'ImageURIProvider' class in SageMaker Python SDK v2.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2020-07-06 21:19:12 Starting - Starting the training job.."
+     ]
+    }
+   ],
    "source": [
     "# Start an Amazon SageMaker training job with Fsx for Lustre using the FileSystemInput class\n",
     "estimator_hvd.fit(file_system_input)\n",
     "print(\"done\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (Data Science)",
+   "display_name": "Environment (conda_tensorflow2_p36)",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:us-east-2:429704687514:image/datascience-1.0"
+   "name": "conda_tensorflow2_p36"
   },
   "language_info": {
    "codemirror_mode": {
@@ -112,7 +145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
